NEXT
    New Features
    * The "git" scheme is supported. (Schwern)
    * svn, ssh and svn+ssh schemes are supported. [rt.cpan.org 57490] (Schwern)

    Backwards Incompatibilities
    * Previously, URIs stringified to their canonical version.  Now
      they stringify as written.  This results in less loss of
      information.  For example.  "Blah HTTP:://FOO.COM" previously
      would stringify as "http://foo.com/" and now it will stringify
      as "HTTP://FOO.COM".  To restore the old behavior you can call
      $uri->canonical. (Schwern)

    Distribution Changes
    * No longer using URI::URL. (Schwern)
    * Now requires URI 1.60 for Unicode support. (Schwern)


20140702  Wed Jul  2 13:41:47 PDT 2014
    New Features
    * IDNA (aka Unicode) domains are now supported. [github 3] (GwenDragon)
    * The list of TLDs for schemeless matching has been updated. [github 3] (GwenDragon)

    Bug Fixes
    * Handle balanced [], {} and quotes in addition to (). [rt.cpan.org 85053] (Schwern)
    * Don't mangle IPv6 URLs. [rt.cpan.org 85053] (Schwern)
    * Schemeless is more accurate about two letter TLDs. [github 3] (GwenDragon)

    Distribution Changes
    * Switched the issue tracker to Github. (Schwern)


20111103  Thu Nov  3 12:14:21 PDT 2011
    Bug Fixes
    * URI::URL::strict will no longer leak out of find() if the callback
      or filter fails. [rt.cpan.org 71153] (Carl Chambers)


20111020  Thu Oct 20 17:31:56 PDT 2011
    Bug Fixes
    * Things which look like URIs, but aren't, are now properly escaped like
      other text.  [rt.cpan.org 71658]

    New Features
    * Balanced parens in URIs are no longer stripped.  Example:
      "http://example.com/foo(bar)"  (Merten Falk)


20100505  Wed May  5 18:48:44 PDT 2010
    Test Fixes
    * Fixed t/urifind/find.t on Windows


20100504.1039  Tue May  4 10:39:23 PDT 2010
    Doc Fixes
    * Forgot to mention that we ship with urifind now.


20100504  Tue May  4 10:29:52 PDT 2010
    New Features